# repo-scout

./: .gitignore  README.en.md  README.md  ROADMAP.md  package-lock.json  package.json
apps/api/: pyproject.toml
apps/api/app/: __init__.py  curation.py  database.py  github_trending.py  main.py  migrations.py  models.py  repository_content.py  scheduler.py  schemas.py  seed.py
apps/api/tests/: test_curation.py  test_github_trending.py  test_repository_content.py
apps/web/: next.config.mjs  package.json  tailwind.config.ts
apps/web/scripts/: test-repository-view-models.mjs
apps/web/src/app/: globals.css  layout.tsx  page.tsx  ranking-sort-control.tsx  repository-view-models.ts  trending-ingestion-config.ts  (+1 more)
docs/: architecture.md  data-model.md  dependency-risks.md  mvp-release-checklist.md  mvp.md  release-readiness.md  runtime-acceptance.md
docs/superpowers/plans/: 2026-06-25-github-trending-ingestion.md  2026-06-27-glm-repository-summary.md  2026-06-28-featured-collection-count-link.md
docs/superpowers/specs/: 2026-06-25-ai-curation-design.md  2026-06-25-github-trending-ingestion-design.md  2026-06-26-featured-collection-page-design.md  2026-06-26-repository-trend-design.md  2026-06-26-trending-filter-design.md  2026-06-27-glm-repository-summary-design.md  2026-06-28-featured-collection-count-link-design.md
scripts/: check-local-data-untracked.sh  check-sensitive-files-untracked.sh  local-demo.sh  test-local-demo.sh  test-mvp-release-checklist.sh  test-runtime-validation.sh  test-validate-local-release.sh  validate-local-release.sh  validate-runtime.sh
(+3 files in other folders)
